# aoc2024

./: .gitignore  Cargo.toml  readme.md
src/: main.rs
src/days/: day01.rs  day02.rs  day03.rs  day04.rs  day05.rs  day06.rs  day07.rs  day08.rs  day09.rs  day1.rs  day10.rs  day11.rs  day12.rs  day13.rs  day14.rs  day15.rs  day16.rs  day17.rs  day18.rs  day19.rs  day2.rs  day20.rs  day21.rs  day22.rs  day23.rs  day24.rs  day25.rs  day3.rs  day4.rs  day5.rs  day6.rs  day7.rs  day8.rs  day9.rs
src/utils/: astar.rs  direction.rs  grid.rs  input.rs  macros.rs  mod.rs  node.rs  point.rs  traits.rs
src/utils/algo/: astar.rs  mod.rs
